# MarkovTextGenerator

./: .gitignore  CMakeLists.txt  LICENSE.txt  Markov.sln  README.md  clean.py  requirements.txt
Markov/: CMakeLists.txt  Main.cpp  Markov.cpp  Markov.h  Markov.vcxproj  Markov.vcxproj.filters  README.txt  Test.cpp  Utility.cpp  Utility.h  calvin.txt  nodejs.txt  python.cpp
Markov/text/: nodejs2.txt  test.txt
text/: README.txt  nodejs.txt  script.py  test.txt
web/: README.md  forms.py  main.py  server.py
web/modules/: CMakeLists.txt  README.txt  buzzfeed.cpp  markovp.cpp
web/src/: __init__.py  buzzfeed.txt  forms.py  views.py  views.txt
web/src/static/css/: main.css
web/src/templates/: README.txt  buzzfeed.html  form.html  layout.html
web/src/views/: README.txt  __init__.py  api.py  buzzfeed_titles.py  home.py
web/static/: main.css
web/static/js/: main.js
web/templates/: footer.html  form.html  header.html  index.html  layout.html  output.html
